--- a/frontend/index.html
+++ b/frontend/index.html
@@ -208,10 +208,10 @@
                 <p>查看營業時間，支援尖峰 / 非尖峰自動計價。選擇多個 30 分鐘時段並一次提交，適合個人練習或團體排練。</p>
                 <div class="card-footer">進入場地預約 →</div>
             </a>
-            <a class="nav-card" href="./class-schedule.html">
+            <a class="nav-card" href="./classes.html">
                 <div class="badge" style="background:rgba(16, 185, 129, 0.1); color: #059669;">Classes</div>
-                <h2>Class Schedule 課堂預約</h2>
-                <p>瀏覽每週課堂時間表、探索試堂方案。即時查看名額與講師資訊，輕鬆完成課程預約。</p>
+                <h2>Class Hub 課堂專區</h2>
+                <p>瀏覽每週課堂時間表、探索試堂方案與套票組合。即時查看名額與講師資訊，輕鬆完成課程預約。</p>
                 <div class="card-footer">前往課堂專區 →</div>
             </a>
         </div>
