--- a/frontend/classes.html
+++ b/frontend/classes.html
@@ -207,8 +207,7 @@
             </a>
 
             <!-- Card 2 -->
-            <a href="#" class="hub-card" style="opacity: 0.7; cursor: not-allowed;"
-                onclick="event.preventDefault(); alert('功能即將推出 Coming Soon');">
+            <a href="./class-packages.html" class="hub-card">
                 <div class="card-icon">🎟️</div>
                 <h2>課程套票 / 月費</h2>
                 <p>選擇不同的課程組合方案，享受更優惠的價格。適合長期練習的學員。</p>
