Fix: Class Schedule DOM crash & Add ICS Calendar export route

--- a/frontend/class-schedule.html
+++ b/frontend/class-schedule.html
@@ -664,7 +664,7 @@
             weekLabel: document.getElementById('week-label'),
             prevWeek: document.getElementById('prev-week'),
             nextWeek: document.getElementById('next-week'),
-            dayButtonsGrid: document.getElementById('day-buttons'),
+            dayButtons: document.getElementById('day-buttons'),
             classList: document.getElementById('classes-container'),
             bookingCard: document.getElementById('booking-card'),
             bookingForm: document.getElementById('class-booking-form'),
